mobile plus minus product button alignment fixed.

--- a/src/app/features/products/components/product-item/product-item.component.sass
+++ b/src/app/features/products/components/product-item/product-item.component.sass
@@ -63,6 +63,9 @@
         border-radius: 50%
     .minus
         padding: 0 7px
+    .mobile .quantity
+        padding: 15px
+        text-align: center
 @media screen and (max-width: 768px)
     .product
         width: 50%
